--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 /* 메인 콘텐트 */
 #main_content { position: relative; width: 1000px; height: 240px; margin: 0 auto; }
 #latest { position: absolute; top: 30px; left: 50px; }
-#latest h4 { width: 500px; font-size: 16px; padding-bottom: 5px; border-bottom: solid 1px #dddddd; }
+#latest h4 { width: 500px; font-size: 16px; padding-bottom: 5px; border-bottom: solid 1px #D4F4FA; }
 #latest ul { margin-top: 20px; }
 #latest li { margin-top: 8px; margin-left: 10px; }
 #latest span { display: inline-block; }
@@ -9,7 +9,7 @@
 #latest span:nth-child(2) { width: 100px; }
 #latest span:nth-child(3) { width: 100px; }
 #point_rank { position: absolute; top: 30px; left: 590px; }
-#point_rank h4 { width: 350px; font-size: 16px; padding-bottom: 5px; border-bottom: solid 1px #dddddd; }
+#point_rank h4 { width: 350px; font-size: 16px; padding-bottom: 5px; border-bottom: solid 1px #D4F4FA; }
 #point_rank ul { margin-top: 20px; }
 #point_rank li { margin-top: 8px; margin-left: 15px; }
 #point_rank span { display: inline-block; }
